--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,7 +63,9 @@ background-color: inherit !important;
 }
 
 
-
+.note{
+    margin-top:25px!important;
+}
 
 /*css for grid sytem checkinng purpose */
 
