--- a/views/individualstudentbca2017.ejs
+++ b/views/individualstudentbca2017.ejs
@@ -74,7 +74,7 @@
               <!--Row for student details -->
       <div >
    
-       <div class="stud-details"> <span class="stud-info"> Name :</span> <%= name%></div>
+       <div class="stud-details"> <span class="stud-info"> Name :</span> <span class="name"><%= name%></span></div>
        <div class="stud-details "> <span class="stud-info"> Roll No :</span> <%=university_roll_number%> </div>
        <div class="stud-details  "> <span class="stud-info"> Status :</span> <%= status%> </div>
        <div class="stud-details  "> <span class="stud-info"> Father Name :</span> <%= father_name%> </div>
@@ -215,6 +215,10 @@
       </div>  <!-- end of Carry Over Paper Detials Column -->
 
 
+    </div>
+    <div class="row">
+        <a href="/resultanalysis">Have a Look At Complete BCA-2017-First-Year-Analysis (Currently BCA 2nd Year)  </a> 
+      
     </div>
 
 
