--- a/views/resultanalysis.ejs
+++ b/views/resultanalysis.ejs
@@ -13,12 +13,205 @@
 	
 <div class="container">
 
-
+ <!--row 1-->
   <div class="row pink">
-  <div class="headings"><b>List of Subject Toppers 2017-18 BCA 1st Year</b></div>
+  <div class="headings"><b>BCA First Sem List of Subject Toppers 2017-18 </b></div>
+  <!--computer fundamental-->
+  <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b>COMPUTER FUNDAMENTAL</b></div>
+  <ul>
+     <li>KM DARANEE SINGH                   47 </li>
+    <li> MOHIT KUMAR DIXIT                  42 </li>
+    <li> AMARSH SINGH                       42 </li>
+     <li> SUSHIL SINGH                       41 </li>
+    <li> MOHD TAUFEEQ QURAISHI              41</li> 
+    <li> LAKSHAY KUMAR                      40 </li>
+    <li> YASH MANGLANI                      40</li>
+  </ul>
   </div>
+  <!--digital electronics-->
+  <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b> DIGITAL ELECTRONICS</b></div>
+  <ul>
+    <LI> AMAN CHITRANSH                 56 </li>
+     <LI> ANKIT KUSHWAHA                 54 </li>
+     <LI> UTKARSH TIWARI                 53 </li>
+    <LI> TANYA SRIVASTAVA               53</li>
+     <LI> ASHUTOSH PRATAP SINGH          53 </li>
+     <LI> ANIKET YAGIK                   53 </li>
+  </ul>
+  </div>
+  
+    <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b>Pcuc</b></div>
+  <ul>
+ <li> YASH MANGLANI                    58 </li>
+ <li> PAWAN KUMAR                      56 </li>
+ <li> TANYA SRIVASTAVA                 55 </li>
+ <li> HIMANSHU KUMAR                   55 </li>
+<li>  ASHUTOSH PRATAP SINGH            54 </li>
+<li>  RIZWAN ASKARI                    54 </li>
+<li>  ANANYA SRIVASTAVA                54</li>
+
+  </ul>
+  </div>
+  
+  
+    <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b>Math1</b></div>
+  <ul>
+ <li>  ARPIT TRIPATHI                 59 </li>
+ <li> ANKIT KUSHWAHA               59 </li>
+<li>  YASH MANGLANI                  59</li>
+ <li> SHIVAM VERMA                   59 </li>
+<li>  ADITYA AGRAWAL               58 </li>
+ <li> SHIVANGI AGARWAL               58</li>
+ <li> MOHD FAIZAN AHMED           57</li>
+  </ul>
+  </div>
+  
+  
+      <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings "><b>Professional Communication</b></div>
+  <ul>
+    
+    <li> AMAN CHITRANSH                 58</li>
+    <li> PALLAV KUMAR TRIPATHI       58   </li>  
+    <li> ABHISHEK SAHU                   58 </li>
+   <li>  ADITYA AGRAWAL                  57</li> 
+    <li> SHIVANGI AGARWAL                57</li> 
+    <li>UDDESHYA TIWARI                 57</li> 
+    <li> ANIKET SINGH         56       </li> 
+    </ul>
+  </div>
+       <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b>Based on Total Marks</b></div>
+  <ol>
+    <li>  YASH MANGLANI                           825</li> 
+   <li> SHIVANGI AGARWAL                       814</li> 
+<li>  ANKIT KUSHWAHA                          805 </li>
+<li>  ANIKET YAGIK                            804 </li>
+<li>  ADITYA AGRAWAL                           799 </li>
+<li>  ANANYA SRIVASTAVA                        778 </li>
+  </ol>
+  </div>
+</div>
+    <!--</div> end of row-->
+    
+    
+    
+    <!--row 2 -->
   <div class="row pink">
-  <div class="headings"><b>Analysis of Total Marks Obtained By Students</b></div>
+  <div class="headings"><b>BCA Second Sem List of Subject Toppers 2017-18 </b></div>
+  <!--computer fundamental-->
+  <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b>Data Structures</b></div>
+  <ul>
+
+  <li> ISHA TRIPATHI                  56 </li> 
+  <li> PRABHAT KUMAR PATHAK           55 </li> 
+ <li>  SUSHANT SINGH                  55</li>  
+  <li> NEETU YADAV                    54 </li> 
+  <li> AJIT SINGH                     54 </li> 
+  <li> MAYANK KASHYAP                 54 </li> 
+  <li> KUNAL RAI                      54</li>
+  </ul>
+  </div>
+  <!--digital electronics-->
+  <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b> Operating System</b></div>
+  <ul>
+  <li>  PAWAN KUMAR                 52 </li> 
+  <li> AAKASH SRIVASTAVA           49 </li> 
+  <li> ADITYA AGRAWAL              49 </li> 
+  <li> ISHA TRIPATHI               49  </li>
+ <li>  KM AZIMA KHATUN             48 </li> 
+ <li>  KM DARANEE SINGH            48 </li> 
+  </ul>
+  </div>
+  
+    <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b>System analysis & Design</b></div>
+  <ul>
+   <li> MOHD TAUFEEQ QURAISHI            45</li>  
+  <li> KM DARANEE SINGH                 43</li>  
+  <li> NEETU YADAV                      42</li>  
+  <li> ASTHA PANDEY                     42</li>  
+  <li> MAYANK KASHYAP                   41</li>  
+ <li>  AAKASH SRIVASTAVA                41</li>
+
+  </ul>
+  </div>
+  
+  
+    <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b>Math 2</b></div>
+  <ul>
+ <li> ADITYA AGRAWAL          55 </li>            
+ <li>  RAHUL YADAV             52 </li>             
+ <li>  PALLAVI SINHA           51 </li>             
+ <li>  MOHD TAUFEEQ QURAISHI   50 </li>             
+ <li>  PRABHAT KUMAR PATHAK    50 </li>             
+ <li>  HIMANSHU MISHRA         50 </li>             
+
+  </ul>
+  </div>
+  
+  
+      <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings "><b>Computer Organization& Architecture</b></div>
+  <ul>
+    
+    <li> PALLAVI SINHA           55 </li>          
+ <li>  ASHUTOSH PRATAP SINGH   52 </li>          
+ <li>  ADITYA AGRAWAL          51 </li>          
+ <li>  PRAMOD KUMAR            49 </li>          
+  <li> ANANYA SRIVASTAVA       48 </li>   
+    </ul>
+  </div>
+       <div class="col-lg-2 col-md-3 col-sm-6 pink">
+  <div class="subject-headings"><b>Based on Total Marks</b></div>
+  <ol>
+             <li> ADITYA AGRAWAL                             802  </li>
+            <li> ANIKET YAGIK                               798</li> 
+            <li>  AMAN CHITRANSH                             794  </li>
+            <li>   KM DARANEE SINGH                           791 </li> 
+            <li>   PALLAVI SINHA                              785 </li> 
+            <li>   ASHUTOSH PRATAP SINGH                      785</li>
+  </ol>
+  </div>
+</div>
+    <!--</div> end of row-->
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+ <div class="note">
+           <ul><i> <b>  Please Read Me:  </b> </i>
+             <li> <i> <b> For Bubble Charts  X axis Denotes the Number of Students and Y axis Denotes the Range of Marks and Size of bubble also Denotes the Number Of Students</b> </i></li>
+             <li> <i> <b> Just in Case if your Getting Confused in Bubble Chart Please do Refer to the labeling  </b> </i></li>
+    
+             <li> <i> <b> Click or Hover over Bubble to See appropriate Numbers </b> </i></li>
+             
+             <li> <i> <b> In case of Google Chrome Mobile app use Auto Rotate and View Website in Landscape Mode</b> </i></li>
+             </li>
+           </ul>
+        </div>
+        
+        
+  <div class="row pink">
+  <div class="headings"><b>Analysis of Total Marks Obtained By Students</b>
+   <div class="note">
+           <ul>
+             <li> <i>Example: In this Graph  Red Color label Refers To the Number of Student in Bca First Year(2017-18) Secured less than 1100 Marks By clicking on that  bubble We get 78 Students </i></li> </ul>
+    </div>
+  <canvas id="stud-analysis"> </canvas></div>
   </div>
 <!-- row 1 -->
 
@@ -127,7 +320,105 @@
 <!-- javascript starts here  -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 <script type="text/javascript">
+// stud-analysis
 	window.onload = function() {
+	new Chart(document.getElementById("stud-analysis"), {
+    type: 'bubble',
+    data: {
+      labels: "analysis",
+      datasets: [
+        {
+          label: ["<1100"],
+          backgroundColor: "rgb(255, 56, 56,0.5)",
+          borderColor: "rgb(255, 56, 56,1)",
+          data: [{
+            x: 78,
+            y: 1100,
+            r: 78
+          }]
+        }, {
+          label: ["1100-1200"],
+          backgroundColor: "rgb(24, 44, 97,0.5)",
+          borderColor: "rgb(24, 44, 97,1)",
+          data: [{
+            x:  62,
+            y: 1200,
+            r:  62
+          }]
+        }, {
+          label: ["1200-1300"],
+          backgroundColor: "rgb(234, 181, 67,0.5)",
+          borderColor: "rgb(234, 181, 67,1)",
+          data: [{
+            x: 61,
+            y: 1300,
+            r: 61
+          }]
+        }, {
+          label: ["1300-1400"],
+          backgroundColor: "rgb(87, 177, 159,0.5)",
+          borderColor: "rgb(88, 177, 159,1)",
+          data: [{
+            x: 48, 
+            y: 1400,
+            r: 48
+          }]
+        },
+        {
+          label: ["1400-1500"],
+          backgroundColor: "rgb(192, 46, 221,0.5)",
+          borderColor: "rgb(190, 46, 221,1)",
+          data: [{
+            x: 36,
+            y: 1500,
+            r: 36
+          }]
+        },
+        {
+          label: [">1500"],
+          backgroundColor: "rgb(49, 58, 71,0.5)",
+          borderColor: "rgb(44, 58, 71,1)",
+          data: [{
+            x: 15,
+            y: 1600,
+            r: 15
+          }]
+        },
+
+      ]
+    },
+    options: {
+      title: {
+        display: true,
+        text: ''
+      }, scales: {
+        yAxes: [{
+        ticks: {
+                max: 1800,
+                min: 800,
+                // stepSize:200
+                
+            }, 
+          scaleLabel: {
+            display: true,
+            labelString: "Range Of Marks"
+          }
+        }],
+        xAxes: [{
+         ticks: {
+                max: 100,
+                min: 0,
+                stepSize:5
+                
+            },  
+          scaleLabel: {
+            display: true,
+            labelString: "Number Of Students"
+          }
+        }]
+      }
+    }
+});
 new Chart(document.getElementById("cf-ese"), {
     type: 'bubble',
     data: {
